chore: optimize Docker build