@@ -3,15 +3,14 @@
 JVM_OPTS="-Xmx512m \
           -Xms512m \
           -XX:+UseZGC \
-          -XX:+ZGenerational \
           -Dspring.profiles.active=prod \
           -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector \
           -javaagent:/app/$(sed -n 's|.*"\(.*transmittable-thread-local.*\)".*|\1|p' BOOT-INF/classpath.idx) \
           ${JVM_OPTS}"
 
-# shellcheck disable=SC2068,SC2086
+# shellcheck disable=SC2086
 if [ $# -eq 0 ]; then
-  exec java ${JVM_OPTS} org.springframework.boot.loader.launch.JarLauncher ${@}
+  exec java ${JVM_OPTS} org.springframework.boot.loader.launch.JarLauncher
 else
-  exec ${@}
+  exec "${@}"
 fi
